# TestNativeApp

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testnativeapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  UacDevice.cpp  UacDevice.h  UsbDevice.cpp  UsbDevice.h  native-lib.cpp  native-lib.h
app/src/main/java/com/example/testnativeapp/: App.kt  Core.kt  CustomSpinnerAdapter.kt  ExtensionFunctions.kt  MainActivity.kt  SplashActivity.kt  UsbActivity.kt  UsbDeviceAdapter.kt  Util.kt
app/src/main/java/com/example/testnativeapp/audiorecorder/: AudioBuffer.java  AudioBuffer.kt  AudioRecorder.java  AudioRecorder.kt  ReadTaskFactory.kt
app/src/main/java/com/example/testnativeapp/descriptors/: ByteStream.java  Usb10ACHeader.java  Usb10ACInputTerminal.java  Usb10ACMixerUnit.java  Usb10ACOutputTerminal.java  Usb10ASFormatI.java  Usb10ASFormatII.java  Usb10ASGeneral.java  Usb20ACHeader.java  Usb20ACInputTerminal.java  Usb20ACMixerUnit.java  Usb20ACOutputTerminal.java  Usb20ASFormatI.java  Usb20ASFormatII.java  Usb20ASFormatIIEx.java  Usb20ASFormatIII.java  Usb20ASGeneral.java  (+25 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_usb.xml  item_dropdown_list.xml  usb_device_view.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/testnativeapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
